# liminal

./: .gitignore  CMakeLists.txt  README.md  implementation.md  liminal-spec.md
.github/workflows/: ci.yml
docs/: ASK.md  BUILD.md  CI.md  EXAMPLES.md  EXECUTION.md  IR.md  LEXER.md  ORACLES.md  PARSER.md  RUNTIME.md  SCHEMA.md  TESTING.md  TYPES.md  architecture.md
examples/: 02_add.lim  03_file_io.lim  04_ask_basic.lim  05_ask_with_cost.lim  06_budget.lim  07_ask_into.lim  08_mixed.lim  09_consult_retry.lim
examples/opus/: README.md  c01_fibonacci.lim  c02_person_greet.lim  c03_traffic_light.lim  c04_array_ops.lim  c05_result_types.lim  c06_data_table.lim  c07_gcd_lcm.lim  c08_constraints.lim  c09_invoice_batch.lim  c10_shift_alerting.lim  c11_ticket_triage_extract.lim  c12_bench_event_aggregation.lim  c13_bench_rule_routing.lim  o01_ask_simple.lim  o02_ask_result.lim  o03_ask_timeout.lim  o04_ask_cost.lim  o05_ask_into.lim  o06_ask_sequence.lim  o07_ask_into_enum.lim  o08_fallback_chain.lim  t01_hello.lim  t02_int_vars.lim  t03_int_arith.lim  t04_real_arith.lim  t05_booleans.lim  t06_strings.lim  t07_comparisons.lim  t08_if_else.lim  t09_if_chain.lim  t10_for_loop.lim  t11_while.lim  t12_repeat.lim  t13_function.lim  t14_func_params.lim  t15_recursion.lim  t16_record.lim  t17_array.lim  t18_enum.lim  (+12 more)
include/liminal/: ast.h  cli.h  exec.h  ir.h  lexer.h  oracles.h  parser.h  runtime.h  schema.h  sha256.h  symtab.h  typecheck.h  types.h  version.h
scripts/: run_opus_benchmarks.sh
src/: CMakeLists.txt  ast.c  cli.c  exec.c  ir.c  lexer.c  liminal.c  main.c  oracle_mock.c  oracle_ollama.c  oracle_record.c  oracles.c  parser.c  runtime.c  schema.c  sha256.c  symtab.c  typecheck.c  types.c
tests/: CMakeLists.txt  fuzz_lexer.c  test_ask.c  test_cli.c  test_consult.c  test_exec.c  test_harness.c  test_harness.h  test_ir.c  test_lexer.c  test_oracles.c  test_parser.c  test_runtime.c  test_schema_emit.c  test_typecheck.c
tests/fixtures/: ask_chain.lim  ask_else.lim  ask_err.lim  ask_into_invalid.lim  ask_ok.lim  ask_unwrap.lim  consult_basic.lim  consult_fallback.lim  consult_hint.lim  consult_retry.lim  exec_add.lim  ir_ask.ir  ir_ask.lim  ir_basic.ir  ir_basic.lim  ir_if.ir  ir_if.lim  lexer_basic.lim  lexer_basic.tokens  lexer_errors.lim  lexer_errors.tokens  lexer_literals.lim  lexer_literals.tokens  parser_ask.ast  parser_ask.lim  parser_basic.ast  parser_basic.lim  parser_errors.ast  parser_errors.errors  parser_errors.lim  parser_exprs.ast  parser_exprs.lim  schema_basic.json  schema_basic.lim
tests/recordings/: examples.jsonl
tmp/: ast_dump  ast_dump.c  fib_min.lim  token_dump  token_dump.c  while_test.lim
